Bug 1091174 - Clean up some AutoMounter calls to register/unregister volume observers. r=mikeh